	- Implemented dirty variables to several scripted GUIs to improve runtime
	- Missiles now have a dirty variable optimizing runtime
	- Implemented dirty variables to Money UIs
	- Improvement for Mircostates remove game rule, now this rule should remove more useless and small countries, especially in Pacific Ocean and Caribbean Sea
	- Cleaned up more add_ai_strategy to optimized AI calls

Quality of Life (QoL):
	- New map modes: GCC (Gulf Cooperation Council), ECOWAS (Economic Community of West African States)
	- Added close button in Satellite Orbit window for convenience
	- EU map mode now has unique colors for office holders

v1.6.3
AI:
	- Investment AI will no longer offer you projects that exceed 730 days
	- Disabled Anti Bully Decisions for AI (They didn't use it anyways)
	- Armenian/Azerbaijan Hostile Relations added
	- Armenia will try and protect Artaskh
	- Tweaked the ability for the AI to build offices
	- Expanded their desire for industrial strength above all (Should build up longer)
	- Expanded some AI strategies for South Africa to be more domineering over the local African minors
	- Switzerland will protect and befriend it's Alpine Brothers
	- Eritrean AI will now be more cautious against Ethiopian in Ethiopian-Eritrean conflict
	- Fixed some issues with some AI frontlines for RAJ, UKR and CHI
	- Introduced AI Ship Limiter
	- Added "Tick" checks so the AI won't decrease and increase taxes in the same week
	- AI will strike back when nuked
	- On DoW AI will set its nuclear weapons on alert
	- Made Danish AI not able to form the kalmer union on historical, and not choose wacky political parties on historical.

Bugfixes:
	- Fixed Steam Link leading to outdated steam page
	- Fixed social buttons positioning for all resolutions
	- Fixed Brazilian idea "Crippled Currency" from not always being removed
	- Brazil should no longer support Ukraine via Employment Projects
	- Fixed Ukrainian event not properly displaying localization