@@ -27,7 +27,7 @@
 	# 			org_damage = 100
 	# 			str_damage = 100 #temp_str_damage
 	# 			ratio = no
-	# 			#template = "template_name" 
+	# 			#template = "template_name"
 	# 			army = yes
 	# 			#navy = yes
 	# 		}
@@ -74,7 +74,7 @@
 	# 		# set_temp_variable = { temp1 = 1 }
 	# 		# while_loop_effect = {
 	# 		# 	#break = <string>
-	# 		# 	limit = { 
+	# 		# 	limit = {
 	# 		# 		ships_in_state_ports = {
 	# 		# 			size > temp1
 	# 		# 			state = 809
@@ -94,7 +94,7 @@
 	# 			#str_damage = 30
 	# 			#str_damage = temp_str_damage
 	# 			ratio = yes
-	# 			#template = "template_name" 
+	# 			#template = "template_name"
 	# 			#army = yes
 	# 			navy = yes
 	# 		}
@@ -2106,11 +2106,9 @@
 	AI_missiles_on_alert_delay_for_performance = {
 		allowed = { always = no }
 		available = { always = no }
-		activation = { always = no 	}
-		visible = {
-			always = yes
-		}
-		days_mission_timeout = 2
+		activation = { always = no }
+		visible = { always = yes }
+		days_mission_timeout = 14
 		selectable_mission = no
 		fire_only_once = yes
 		timeout_effect = {
