@@ -1369,6 +1369,23 @@ allow_multiple_formables = {
 	}
 }
 
+rule_disable_missile_alert_ai = {
+	name = "RULE_DISABLE_ALERT_AI"
+	group = "MD_RULES"
+	icon = "GFX_production_licenses"
+
+	default = {
+		name = no
+		text = "RULE_OPTION_NO"
+		desc = "RULE_DISABLE_ALERT_AI_DESC"
+	}
+	option = {
+		name = yes
+		text = "RULE_OPTION_YES"
+		desc = "RULE_DISABLE_ALERT_YES_AI_DESC"
+	}
+}
+
 rule_randomize_ideologies = {
 	name = "RULE_RANDOM_IDEOLOGIES"
 	group = "MD_RANDOM_RULES"
