@@ -1132,6 +1132,17 @@ on_actions = {
 				set_global_flag = GAME_RULE_allow_kick_faction_blocked
 			}
 
+			# Disable Missile Alert AI
+			if = {
+				limit = {
+					has_game_rule = {
+						rule = rule_disable_missile_alert_ai
+						option = yes
+					}
+				}
+				set_global_flag = GAME_RULE_disabled_missile_alert_ai
+			}
+
 			# Volunteers
 			if = {
 				limit = {
