@@ -274,6 +274,7 @@ on_actions = {
 		effect = {
 			if = {
 				limit = {
+					NOT = { has_global_flag = GAME_RULE_disabled_missile_alert_ai }
 					FROM = {
 						is_ai = yes
 						#
@@ -300,8 +301,4 @@ on_actions = {
 			}
 		}
 	}
-
-
 }
-
-
