@@ -260,6 +260,11 @@
  RULE_ALLOW_MULTIPLE_FORMABLES_BLOCKED_DESC: "Only allow a specific formable to be formed by one nation."
  RULE_ALLOW_MULTIPLE_FORMABLES_ALLOWED_DESC: "Allows for the same formable to be formed by any nation that meets the necessary criteria (this may result in rival Arab Unions for example). Flags for these formable nations are set up so it is likely they will be unique, however this is not guaranteed."
 
+ # Disable Missile Alert AI
+ RULE_DISABLE_ALERT_AI: "Disable Alert AI"
+ RULE_DISABLE_ALERT_AI_DESC: "All nuclear powers such as the United States, North Korea, China and Russia will set nucelar forces on alert to counter nuke if a player nukes them. Enabling this will cause some slowdown for performance but results in a more dynamic AI."
+ RULE_DISABLE_ALERT_YES_AI_DESC: "You can nuke the AI and it won't do anything back. It is only for saving performance for lower-end PCs"
+
  #Edgy Flags
  RULE_ALLOW_EDGY_FLAGS: "Allow Edgy Flags"
  RULE_ALLOW_EDGY_FLAGS_BLOCKED_DESC: "Keeps some of the more controversial flag options from appearing."
