@@ -151,6 +151,7 @@ Performance:
 	- Implemented dirty variables to Money UIs
 	- Improvement for Mircostates remove game rule, now this rule should remove more useless and small countries, especially in Pacific Ocean and Caribbean Sea
 	- Cleaned up more add_ai_strategy to optimized AI calls
+	- Added a game rule for disabling missile alert AI to save on performance for lower end PCs
 
 Quality of Life (QoL):
 	- New map modes: GCC (Gulf Cooperation Council), ECOWAS (Economic Community of West African States)
